Apply `Standard Charset object can be used` inspection the whole project